# Capstone-2026-TaskMangement

./: .gitignore  README.md  pyproject.toml
docs/: API_GUIDE.md  BACKEND_CODE_MAP.md  FRONTEND_GUIDE.md  PROJECT_DISCUSSION.md  PYTHON_REVISION_QUALITATIVE_ANALYSIS.md  QUANTIZATION_STUDY.md  REPO_GUIDE.md  RESEARCH_DECISIONS.md  SYSTEM_DESIGN.md
scripts/backend/: run_api.py  run_backend_demo.py  run_system_smoke.py
scripts/benchmarks/: benchmark_gemma.py  benchmark_gemma_chat.py  benchmark_llama_cpp.py  benchmark_llama_server.py  common_paths.py
scripts/frontend/: run_desktop_app.py
src/adaptive_planner/: __init__.py  api.py  api_models.py  assistant.py  client.py  desktop_app.py  domain.py  gemma_adapter.py  planner.py  policies.py  reminders.py  scheduler.py  schema.py  services.py  state_machine.py  storage.py
src/adaptive_planner/webui/: index.html
src/adaptive_planner/webui/static/: app.js  styles.css
tests/: test_api.py  test_client.py  test_gemma_adapter.py  test_overall_system_flow.py  test_policies.py  test_scheduler.py  test_service_flow.py  test_state_machine.py
